# CaseMatch-Agent

./: .env.example  .gitignore  README.md  SCHEMA.md  pyproject.toml
scripts/: add_cases_to_db.py  build_lancedb_index.py  download_hf_data.py  hybrid_experiment.py
src/casematch_agent/: __init__.py  agent.py  case_ingestion.py  clarification.py  cli.py  corpus.py  extractor.py  gradio_app.py  import_service.py  lancedb_store.py  llm.py  memory.py  models.py  postgres_store.py  retriever.py  sample_cases.py  search_profiles.py  sqlite_store.py  utils.py
src/casematch_ranker/: __init__.py  bge_m3.py  bm25.py  hybrid.py
tests/: test_agent.py  test_case_ingestion.py  test_hybrid_experiment_metrics.py  test_import_service.py  test_lancedb_store.py  test_ranker.py
