[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "casematch-agent"
version = "0.1.0"
description = "Prototype agent for Chinese legal similar-case retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
casematch-agent = "casematch_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
